Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29992

Custom Parser does not work with CMake projects

    XMLWordPrintable

Details

    • 684657926 (master)

    Description

      Pattern:

      file://(.*):(\d+): (.*)
      

      And positions 1, 2, 3.

      in CMakeLists.txt:

      add_custom_target(custom ALL echo "file:///tmp/j.foo:123: some error")
      message("file:///tmp/j.foo:123: some error")
      

      Neither of these messages is recognized. This seems to work fine in qmake projects.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cadam Cristian Adam
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes