CMakePM: Allow usage of custom output parsers for CMake output

Fixes: QTCREATORBUG-29992
Change-Id: Ia84871cc963263c34054d17742556b38a1f1934e
Reviewed-by: hjk <hjk@qt.io>