src/plugins/cmakeprojectmanager/builddirparameters.cpp
@@ -8,16 +8,19 @@
 #include "cmakekitaspect.h"
 #include "cmaketoolmanager.h"
 
+#include <projectexplorer/customparser.h>
 #include <projectexplorer/kitaspects.h>
 #include <projectexplorer/project.h>
 #include <projectexplorer/target.h>
 #include <projectexplorer/toolchain.h>
 
 #include <utils/algorithm.h>
+#include <utils/aspects.h>
 #include <utils/macroexpander.h>
 #include <utils/qtcassert.h>
 
 using namespace ProjectExplorer;
+using namespace Utils;
 
 namespace CMakeProjectManager::Internal {
 
@@ -70,6 +73,15 @@ BuildDirParameters::BuildDirParameters(CMakeBuildSystem *buildSystem)
     environment.setFallback("CLICOLOR_FORCE", "1");
 
     cmakeToolId = CMakeKitAspect::cmakeToolId(k);
+
+    outputParserGenerator = [k, bc]() {
+        QList<OutputLineParser *> outputParsers = k->createOutputParsers();
+        for (const Id id : bc->customParsers()) {
+            if (auto parser = createCustomParserFromId(id))
+                outputParsers << parser;
+        }
+        return outputParsers;
+    };
 }
 
 bool BuildDirParameters::isValid() const
@@ -80,6 +92,12 @@ bool BuildDirParameters::isValid() const
 CMakeTool *BuildDirParameters::cmakeTool() const
 {
     return CMakeToolManager::findById(cmakeToolId);
+}
+
+QList<OutputLineParser *> BuildDirParameters::outputParsers() const
+{
+    QTC_ASSERT(outputParserGenerator, return {});
+    return outputParserGenerator();
 }
 
 } // CMakeProjectManager::Internal
